@@ -3,7 +3,9 @@ using System.Collections.Generic;
 using System.Linq;
 using System.Threading.Tasks;
 using ArC.CardGames.Components;
+using ArC.CardGames.Predefined.Common;
 using ArC.CardGames.Predefined.Vanguard;
+using ArC.Common.Extensions;
 using Godot;
 
 public partial class InputProvider : Control
@@ -53,7 +55,7 @@ public partial class InputProvider : Control
         Action<List<Card>> handler = (cards) =>
         {
             SelectCardsFromHandComponent.Deactivate();
-            completionSource.SetResult(cards.Cast<VanguardCardComponent>().Select(x => x.Card).Cast<CardBase>().ToList());
+            completionSource.SetResult(cards.Select(x => x.CurrentCard).ToList());
         };
         SelectCardsFromHandComponent.ConfirmedCards += handler;
         
@@ -65,8 +67,8 @@ public partial class InputProvider : Control
     public async Task<CardBase> RideVanguardFromHandOrNot(VanguardCard currentVanguard)
     {
         DragHandToZone = true;
-        Board.PlayerVanguard.Droppable = true;
         Board.ShowEndPhaseButton();
+        Board.EnablePlayerVanguardDropping();
         
         VanguardCard newVanguard = null;
 
@@ -90,7 +92,7 @@ public partial class InputProvider : Control
                 break;
             }
 
-            newVanguard = ((VanguardCardComponent)result).Card;
+            newVanguard = (VanguardCard)result.CurrentCard;
             var exception = VanguardValidator.ValidateRide(currentVanguard, newVanguard);
 
             if (exception is not null)
@@ -103,8 +105,26 @@ public partial class InputProvider : Control
             }
         }
 
-        Board.PlayerVanguard.Droppable = true;
+        Board.DisablePlayerVanguardDropping();
+        Board.HideEndPhaseButton();
 
         return newVanguard;
+    }
+
+    public async Task<IMainPhaseAction> AskForMainPhaseAction(List<IMainPhaseAction> actions)
+    {
+        TaskCompletionSource<IMainPhaseAction> completionSource = new();
+        Board.ShowEndPhaseButton();
+        Action endPhaseHandler = () => {
+            var selected = actions.FirstOf<EndMainPhase>();
+            completionSource.SetResult(selected);
+        };
+        Board.EndPhasePressed +=  endPhaseHandler;
+
+
+        var result = await completionSource.Task;
+        Board.EndPhasePressed -=  endPhaseHandler;
+        Board.HideEndPhaseButton();
+        return result;
     }
 }
