@@ -1,61 +1,12 @@
 using System;
+using ArC.CardGames.Components;
 using Godot;
 
 [Tool]
-public partial class Card : Control
+public partial class Card : CardBaseComponent
 {
-    TextureRect Front;
-
-    private bool _currentlyDragged = false;
-    public bool CurrentlyDragged { 
-        get => _currentlyDragged;
-        set
-        {
-            _currentlyDragged = value;
-            Visible = !_currentlyDragged;
-        } 
-    }
-
-    private Texture2D texture;
-    [Export]
-    public Texture2D Texture
-    {
-        get => texture;
-        set
-        {
-            texture = value;
-            Render();
-        }
-    }
-
-    private bool _isFront = true;
-    [Export]
-    public bool IsFront
-    {
-        get => _isFront;
-        set
-        {
-            _isFront = value;
-            Render();
-        }
-    }
-
-    public Vector2 EffectiveSize => CustomMinimumSize * Scale;
-
-    public override void _Ready()
-    {
-        CustomMinimumSize = SizeConstants.CardDefaultSize;
-        Front = GetNode<TextureRect>($"%{nameof(Front)}");
-        Render();
-    }
-
-    private void Render()
-    {
-        if(!IsInsideTree()) return;
-        Front.Visible = _isFront;
-        Front.Texture = texture;
-    }
-
+    CardBase card;
+    public virtual CardBase CurrentCard => card;
     public override void _GuiInput(InputEvent @event)
     {
         if(@event is InputEventMouseButton inputEventMouseButton)
@@ -67,28 +18,23 @@ public partial class Card : Control
         }
     }
 
-    public override Variant _GetDragData(Vector2 atPosition)
+    public override Card CreateClone()
     {
-        SetDragPreview(CreateClone());
-        CurrentlyDragged = true;
-        return this;
-    }
-
-    public override void _Notification(int what)
-    {
-        if(what == NotificationDragEnd && CurrentlyDragged)
-        {
-            if(!IsDragSuccessful())
-            {
-                CurrentlyDragged = false;
-            }
-        }
-    }
-
-    public virtual Card CreateClone()
-    {
-        var preview = SceneFactory.CreateCard(Texture, IsFront);
+        var preview = SceneFactory.CreateCard(CurrentCard);
         return preview;
+    }
+
+    public virtual void LoadVanguardCard(CardBase card)
+    {
+        this.card = card;
+        Texture = GetCardNameTexture(card.Name);
+    }
+
+    protected Texture2D GetCardNameTexture(string cardName)
+    {
+        var cleanedName = cardName.Replace(" ", "").Replace(",", "");
+        var path = $"res://Assets/Cards/{cleanedName}.png";
+        return ResourceLoader.Load<Texture2D>(path);
     }
 
     public event Action<Card> CardPressed;
