@@ -1,26 +1,11 @@
 using ArC.CardGames.Predefined.Vanguard;
-using Godot;
 
 public partial class VanguardCardComponent : Card
 {
-    VanguardCard card;
-    public VanguardCard Card => card;
-    public void LoadVanguardCard(VanguardCard card)
-    {
-        this.card = card;
-        Texture = GetCardNameTexture(card.Name);
-    }
-
-    private Texture2D GetCardNameTexture(string cardName)
-    {
-        var cleanedName = cardName.Replace(" ", "").Replace(",", "");
-        var path = $"res://Assets/Cards/{cleanedName}.png";
-        return ResourceLoader.Load<Texture2D>(path);
-    }
-
+    public override VanguardCard CurrentCard => (VanguardCard)base.CurrentCard;
     public override Card CreateClone()
     {
-        var card = SceneFactory.CreateVanguardCard(Card);
+        var card = SceneFactory.CreateVanguardCard(CurrentCard);
         return card;
     }
 }
